temp/objects/Settings__c.object
<CustomObject>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>ConsumerKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SecurityToken__c</fullName>
        <label>SecurityToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>